# lmnop

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: push.yaml  test.yaml
builder/: Dockerfile  Makefile  pyproject.toml
builder/conf/: entrypoint
builder/tests/: test_function_configuration.py
docker/scm/: Dockerfile
example/example-hugo-app/: README  function.yml
example/example-python3.10-app/: README  entrypoint  function.yml
example/openfaas/: README.md  alertmanager-cfg.yaml  alertmanager-dep.yaml  alertmanager-svc.yaml  controller-rbac.yaml  gateway-dep.yaml  gateway-svc.yaml  haproxy.yaml  ns.yaml  profile-crd.yaml  prometheus-cfg.yaml  (+4 more)
portal/: Dockerfile  pyproject.toml
portal/entrypoints/: cmd  run  venv
portal/src/configurations/: development.conf  logging.conf
portal/src/lmnop/: __main__.py
portal/src/lmnop/portal/: __main__.py  app.py  tools.py
portal/src/lmnop/portal/blueprints/: __init__.py
portal/src/lmnop/portal/blueprints/functions/: __init__.py  actions.py  views.py
portal/src/lmnop/portal/blueprints/functions/templates/functions/: index.html
portal/src/lmnop/portal/blueprints/health/: __init__.py  views.py
portal/src/lmnop/portal/blueprints/main/: __init__.py  views.py
portal/src/lmnop/portal/blueprints/main/static/: main.css
portal/src/lmnop/portal/blueprints/main/templates/: index.html  main.html
portal/src/lmnop/portal/blueprints/password/: __init__.py  views.py
portal/src/lmnop/portal/blueprints/password/templates/password/: index.html
portal/src/lmnop/portal/blueprints/secrets/: __init__.py  actions.py  views.py
portal/src/lmnop/portal/blueprints/secrets/templates/secrets/: index.html
portal/src/lmnop/portal/database/: __init__.py
portal/tests/: test_version.py
router/: Dockerfile
sql/: rebuild.sql
tests/: test_function_configuration.py
(+48 files in other folders)
